# WF_Transcriptome

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  repeat_pipeline_with_mask.jl  repeat_wfpipeline.jl  run_with_masked_urandom.jl  sbatch_wftr.jl
.cargo/: config.toml
build_tasks/: Cargo.toml
build_tasks/src/: lib.rs  main.rs  utils.rs
container/: wf_apps.def  wf_deps.def
scripts/: JSONLogger.jl  de_analysis.R  de_analysis_0.R  pipeline_steps.jl  plot_dtu_results.R  plot_dtu_results_0.R  run_wftrpipeline.jl  wftrpipeline.jl
self_configurator/: Cargo.toml  Dioxus.toml  build.rs
self_configurator/.cargo/: config.toml
self_configurator/sketches/: .$Ablaufdiagramm.drawio.bkp  .$SelfConfiguratorWfTranscriptome.drawio.bkp  SelfConfiguratorWfTranscriptome.drawio
self_configurator/src/: main.rs
self_configurator/src/backend/: colony_interop.rs  mod.rs
self_configurator/src/components/: buttons.rs  input_fields.rs  misc.rs  mod.rs
self_configurator/src/pages/: app.rs  main_page.rs  mod.rs
self_configurator/src/public/: color_palette_green1.css  color_palette_green2.css  norm.css  resets.css  styles.css
