
[package]
name = "self_configurator"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { version = "0.1.88", optional = true }
axum = { version = "0.7.9", optional = true }
clap = "4.5.43"
dioxus = { version = "0.6.3", features = ["fullstack"] }
dioxus-fullstack = { version = "0.6.3", optional = true }
#dioxus-fullstack = { version = "0.6.3", default-features = false, features = ["axum"], optional = true }
dioxus-web = { version = "0.6.3", features = ["hydrate"], optional = true }
dioxus-cli-config = { version = "0.6.3", optional = true }
dioxus-isrg = { version = "0.6.2" }
ehttp = "0.5.0"
http = { version = "1.3.1", optional = true }
hyper = { version = "1.6.0", features = ["http2"] }
regex = "1.11.1"
#reqwest = { version = "0.12.22", features = ["blocking", "json", "stream"] }
serde = { version = "1.0.219", features = ["derive", "serde_derive"] }
serde_json = "1.0.142"
simple_logger = { version = "5.0.0", optional = true }
tokio = { version = "1.38.0", features = ["full"], optional = true }
#tokio = { version = "1.47.1", features = ["sync", "macros", "rt"], optional = true }
tokio-stream = { version = "0.1.17", features = ["sync"] }
#tokio-wasm = { package = "tokio", version = "1.47.1", features = ["sync", "macros", "rt"], optional = true }
tower = { version = "0.4.13", optional = true }
tower-http = { version = "0.5.2", features = ["auth"], optional = true }
uuid = { version = "1.17.0", features = ["v4", "js"] }

[features]
default = []
web = ["dioxus/web", "dioxus-web"]
#server = ["axum", "tokio", "dioxus/fullstack", "dioxus-fullstack", "tower-http", "async-trait", "http", "tower"]
server = [
    "dioxus-cli-config",
    "axum",
    "tokio",
    "dioxus-fullstack/axum",
    "tower-http",
    "async-trait",
    #"axum_session",
    #"axum_session_auth",
    "http",
    "tower",
]

#[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
#tokio = { version = "1.47.1", features = ["full"], optional = true }

#[target.'cfg(target_arch = "wasm32")'.dependencies]
#tokio = { version = "1.47.1", features = ["sync", "macros", "rt"], optional = true }


[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"





# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



